--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@angular/platform-browser": "^7.2.7",
         "@angular/platform-browser-dynamic": "^7.2.7",
         "@angular/router": "^7.2.7",
+        "@ctrl/ngx-codemirror": "^1.3.10",
         "@ng-select/ng-select": "^2.16.0",
         "@turf/turf": "^5.1.6",
         "@types/moment": "^2.13.0",
@@ -32,6 +33,7 @@
         "ag-grid-angular": "^20.1.0",
         "ag-grid-community": "^20.1.0",
         "buffer": "^5.2.1",
+        "codemirror": "^5.44.0",
         "core-js": "^2.5.4",
         "events": "^3.0.0",
         "file-saver": "^2.0.0",
@@ -53,8 +55,7 @@
         "tslib": "^1.9.0",
         "xlsx": "^0.14.1",
         "xml2js": "^0.4.19",
-        "zone.js": "~0.8.29",
-        "@ctrl/ngx-codemirror": "1.3.5"
+        "zone.js": "~0.8.29"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.13.4",
