Adding table summary for services created

--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "C:\\D\\DesarrollosASP\\workspace_masflight\\masflightApplicationRemake\\src\\main\\resources\\static",
+                        "outputPath": "C:\\D\\DesarrollosASP\\workspace_masflight\\MasflightServiceEngine\\src\\main\\resources\\static",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
